# linear-a-decipherer

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ATTRIBUTION.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORPUS_DATA_2026-01-09.md  ENGINEERING_PRACTICES.md  GIT_WORKFLOW.md  LICENSE  PROJECT_REVIEW.md  README.md  SECURITY.md  SESSION_LOG_2026-01-05.md  SESSION_LOG_2026-01-09.md  linear-a-decipherer.skill  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
analyses/: KNOSSOS_SCEPTER_DATA_2026-01-09.md  KOBER_METHOD_ANALYSIS_2026-01-09.md
analysis/: SA-RA2_akkadian_deep_investigation.md
config/: lane_manifest.yaml  month1_decipherment_manifest.yaml
data/: anchors.json  reading_dependencies.json
linear-a-decipherer/: ANALYSIS_INDEX.md  CHANGELOG.md  CONFIRMED_READINGS.md  FINDINGS_LOG.md  FIRST_PRINCIPLES.md  KNOWLEDGE.md  LESSONS_LEARNED.md  MASTER_STATE.md  METHODOLOGY.md  RELEASE_NOTES_v0.12.0.md  STATE_OF_KNOWLEDGE.md  TOOLS_GUIDE.md  WORKSTREAMS.md
references/: sources.md
templates/: PROMOTION_PACKET_TEMPLATE.md  SESSION_TEMPLATE.md  SPRINT_WEEKLY_UPDATE_TEMPLATE.md
tests/: test_arithmetic_verifier.py  test_commodity_validator.py  test_hypothesis_consistency.py  test_project_acceleration_review.py  test_promotion_board_runner.py  test_reading_readiness.py  test_smoke.py  test_sprint_orchestrator.py  test_update_index.py  test_ventris_tools.py  test_version_metadata.py
tools/: admin_isomorphism_scorer.py  analyze_inscription.py  analyze_ph.py  anchor_tracker.py  (+59 more)
(+243 files in other folders)
